# rust-hashtables

./: Cargo.toml  readme.md  rust-toolchain.toml
.github/workflows/: rust.yml
ChainingHashMap get/load_factor=00.10/new/: estimates.json
ChainingHashMap get/load_factor=00.10/report/: index.html
ChainingHashMap get/load_factor=00.20/base/: sample.json
ChainingHashMap get/load_factor=00.20/new/: benchmark.json  estimates.json
ChainingHashMap get/load_factor=00.30/report/: index.html
ChainingHashMap get/load_factor=00.40/base/: estimates.json
ChainingHashMap get/load_factor=00.40/new/: sample.json
ChainingHashMap get/load_factor=00.40/report/: index.html
ChainingHashMap get/load_factor=00.50/report/: index.html
ChainingHashMap get/load_factor=00.60/new/: estimates.json  tukey.json
ChainingHashMap get/load_factor=00.70/report/: index.html
ChainingHashMap get/load_factor=00.80/base/: sample.json  tukey.json
ChainingHashMap get/load_factor=00.80/new/: benchmark.json
ChainingHashMap get/load_factor=00.90/new/: sample.json  tukey.json
ChainingHashMap get/load_factor=00.90/report/: index.html
ChainingHashMap get/report/: index.html
ChainingHashMap insert/report/: index.html
CuckooHashMap get/report/: index.html
CuckooHashMap insert/report/: index.html
HashMap compared get/report/: index.html
OpenHashMap get/report/: index.html
benches/: benchmark.rs
src/: chaining_hashing.rs  chaining_hashing_concurrent.rs  chaining_hashing_concurrent_optimized.rs  cuckoo_hashing.rs  lib.rs  open_hashing.rs  quad_cuckoo_hashing.rs
(+315 files in other folders)
